Revert "app config"
This reverts commit 69532b9875248e89eafe41379b0ff724d8f03dbc.

--- a/app.json
+++ b/app.json
@@ -7,11 +7,11 @@
   "env": {
     "ISSUER": {
       "description": "Issuer URL for your org",
-      "value": "https://trial-3839983.okta.com/oauth2/default"
+      "value": "https://{yourDomain}/oauth2/default"
     },
     "CLIENT_ID": {
       "description": "Client ID for your application",
-      "value": "0oar6rlf4DdGGt4Zc696"
+      "value": "CLIENT_ID"
     },
     "NPM_CONFIG_PRODUCTION": {
       "description": "npm config production",
